--- a/app/src/main/res/layout/fragment_city_detail.xml
+++ b/app/src/main/res/layout/fragment_city_detail.xml
@@ -24,10 +24,11 @@
 			android:layout_height="wrap_content"
 			android:id="@+id/city_detail_temperature"
 			tools:text="+18"
-			android:textSize="24sp"
+			android:textSize="12sp"
 			android:drawableLeft="@drawable/weather_icon_02"
 			android:gravity="center"
-			android:drawablePadding="@dimen/padding_small"/>
+			android:scaleX="2"
+			android:scaleY="2"/>
 		<TextView
 			android:layout_gravity="center_horizontal"
 			android:layout_width="wrap_content"
@@ -77,7 +78,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:id="@+id/close_button"
-		android:text="@string/close"
+		android:text="@string/back"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
