--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="padding">16dp</dimen>
     <dimen name="padding_small">8dp</dimen>
+    <dimen name="margin_small">8dp</dimen>
 </resources>
