--- a/app/src/main/res/drawable/background_title.xml
+++ b/app/src/main/res/drawable/background_title.xml
@@ -20,7 +20,7 @@
 		<shape android:shape="rectangle">
 			<gradient android:angle="-90"
 					  android:startColor="#ccc"
-					  android:centerColor="@color/white"
+					  android:centerColor="@android:color/white"
 					  android:endColor="#ccc"/>
 		</shape>
 	</item>
