--- a/app/src/main/res/drawable/location_button.xml
+++ b/app/src/main/res/drawable/location_button.xml
@@ -4,7 +4,7 @@
 		<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 			<item>
 				<shape android:shape="rectangle">
-					<size android:height="48dp" android:width="48dp"/>
+					<size android:height="@dimen/location_button_size" android:width="@dimen/location_button_size"/>
 					<solid android:color="@color/colorPrimary"/>
 					<corners android:radius="10dp"/>
 				</shape>
@@ -16,7 +16,7 @@
 		<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 			<item>
 				<shape android:shape="rectangle">
-					<size android:height="48dp" android:width="48dp"/>
+					<size android:height="@dimen/location_button_size" android:width="@dimen/location_button_size"/>
 					<solid android:color="@color/disabledLocationButton"/>
 					<corners android:radius="10dp"/>
 				</shape>
