--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,17 +8,20 @@
 	tools:context=".MainActivity">
 	<android.support.v4.view.ViewPager
 		android:id="@+id/view_pager"
-		android:layout_width="match_parent"
+		android:layout_width="0dp"
 		android:layout_height="0dp"
-		tools:layout_editor_absoluteY="8dp"
 		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintBottom_toTopOf="@id/tabs"/>
 	<android.support.design.widget.TabLayout
-		app:layout_constraintBottom_toBottomOf="parent"
 		android:id="@+id/tabs"
-		android:layout_width="match_parent"
+		android:layout_width="0dp"
 		android:layout_height="wrap_content"
+		android:background="@color/colorPrimary"
 		app:tabTextAppearance="@style/TabTextAppearance"
 		app:tabSelectedTextColor="@android:color/white"
-		android:background="?attr/colorPrimary"/>
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"/>
 </android.support.constraint.ConstraintLayout>
