--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
 	<color name="colorPrimaryDark">#00574B</color>
 	<color name="colorAccent">#D81B60</color>
 	<color name="tabUnselectedTextColor">#bbb</color>
-	<color name="white">#fff</color>
 	<color name="cityNameColor">#333</color>
 	<color name="disabledLocationButton">#80008577</color>
+	<color name="updateScreenBackground">#8a000000</color>
 </resources>
