--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,8 +1,12 @@
 <resources>
 	<!-- Default screen margins, per the Android Design guidelines. -->
-	<dimen name="activity_horizontal_margin">16dp</dimen>
-	<dimen name="activity_vertical_margin">16dp</dimen>
 	<dimen name="padding">16dp</dimen>
 	<dimen name="padding_small">8dp</dimen>
 	<dimen name="margin_small">8dp</dimen>
+	<dimen name="location_button_size">48dp</dimen>
+	<dimen name="detail_temperature_text_size">12sp</dimen>
+	<dimen name="large_text_size">24sp</dimen>
+	<dimen name="info_window_city_text_size">16sp</dimen>
+	<dimen name="list_item_title_size">20sp</dimen>
+
 </resources>
