--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,8 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	tools:context=".MainActivity">
-	<android.support.v4.view.ViewPager
-		android:id="@+id/view_pager"
+	<ru.dpav.weather.NonSwipeViewPager
+		android:id="@+id/viewPager"
 		android:layout_width="0dp"
 		android:layout_height="0dp"
 		app:layout_constraintTop_toTopOf="parent"
