--- a/app/src/main/res/layout/fragment_city_detail.xml
+++ b/app/src/main/res/layout/fragment_city_detail.xml
@@ -15,9 +15,9 @@
 		app:layout_constraintTop_toTopOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintBottom_toTopOf="@+id/close_button">
+		app:layout_constraintBottom_toTopOf="@+id/closeButton">
 		<TextView
-			android:id="@+id/city_detail_temperature"
+			android:id="@+id/cityDetailTemperature"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_gravity="center_horizontal"
@@ -32,7 +32,7 @@
 			android:layout_gravity="center_horizontal"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:id="@+id/city_detail_title"
+			android:id="@+id/cityDetailTitle"
 			android:textSize="@dimen/large_text_size"
 			tools:text="Город"/>
 		<LinearLayout
@@ -43,26 +43,26 @@
 			android:paddingTop="@dimen/padding"
 			android:gravity="center">
 			<TextView
-				android:id="@+id/city_detail_wind"
+				android:id="@+id/cityDetailWind"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:padding="0dp"
 				tools:text="Ветер: 8 м/с"
 				style="@style/CityDetailInfo"/>
 			<TextView
-				android:id="@+id/city_detail_cloudy"
+				android:id="@+id/cityDetailCloudy"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				tools:text="Облачность: 40%"
 				style="@style/CityDetailInfo"/>
 			<TextView
-				android:id="@+id/city_detail_humidity"
+				android:id="@+id/cityDetailHumidity"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				tools:text="Влажность: 15%"
 				style="@style/CityDetailInfo"/>
 			<TextView
-				android:id="@+id/city_detail_pressure"
+				android:id="@+id/cityDetailPressure"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				tools:text="Давление: 760 мм"
@@ -70,7 +70,7 @@
 		</LinearLayout>
 	</LinearLayout>
 	<Button
-		android:id="@+id/close_button"
+		android:id="@+id/closeButton"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:text="@string/back"
