--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -1,7 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView
+<FrameLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/cities_recycler_view"
 	android:layout_width="match_parent"
-	android:layout_height="wrap_content"
-	android:scrollbars="vertical"/>
+	android:layout_height="match_parent">
+	<android.support.v7.widget.RecyclerView
+		android:id="@+id/cities_recycler_view"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:scrollbars="vertical"/>
+	<TextView
+		android:id="@+id/citiesNotFound"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center"
+		android:textSize="@dimen/large_text_size"
+		android:text="@string/list_empty"
+		android:visibility="gone"/>
+</FrameLayout>
