--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
 	<dimen name="large_text_size">24sp</dimen>
 	<dimen name="info_window_city_text_size">16sp</dimen>
 	<dimen name="list_item_title_size">20sp</dimen>
+	<dimen name="dropDownListWidth">50dp</dimen>
 </resources>
