--- a/app/src/main/res/layout/fragment_city_detail.xml
+++ b/app/src/main/res/layout/fragment_city_detail.xml
@@ -33,6 +33,10 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:id="@+id/cityDetailTitle"
+			android:layout_marginStart="@dimen/margin_small"
+			android:layout_marginLeft="@dimen/margin_small"
+			android:layout_marginEnd="@dimen/margin_small"
+			android:layout_marginRight="@dimen/margin_small"
 			android:textSize="@dimen/large_text_size"
 			tools:text="Город"/>
 		<LinearLayout
