--- a/app/src/main/res/layout/info_window_weather.xml
+++ b/app/src/main/res/layout/info_window_weather.xml
@@ -4,14 +4,17 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
+	android:minWidth="@dimen/infoWindowMinWidth"
 	android:orientation="vertical"
 	android:padding="@dimen/padding_small"
 	android:background="@drawable/background_info_window">
 	<TextView
 		android:id="@+id/infoWindowTitle"
-		android:layout_width="match_parent"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:gravity="center_vertical"
+		android:maxLength="30"
+		android:ellipsize="end"
 		android:textSize="@dimen/info_window_city_text_size"
 		android:textStyle="bold"
 		android:drawableStart="@drawable/weather_icon_01"
