--- a/app/src/main/res/layout/info_window_weather.xml
+++ b/app/src/main/res/layout/info_window_weather.xml
@@ -4,25 +4,39 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
+	android:background="@drawable/background_info_window"
 	android:minWidth="@dimen/infoWindowMinWidth"
-	android:orientation="vertical"
-	android:padding="@dimen/padding_small"
-	android:background="@drawable/background_info_window">
+	android:orientation="vertical">
 	<TextView
 		android:id="@+id/infoWindowTitle"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:gravity="center_vertical"
-		android:maxLength="30"
+		android:drawableLeft="@drawable/weather_icon_01"
+		android:drawableStart="@drawable/weather_icon_01"
 		android:ellipsize="end"
+		android:gravity="center_vertical"
+		android:maxLength="25"
+		android:paddingLeft="@dimen/padding_small"
+		android:paddingRight="@dimen/padding_small"
+		android:paddingTop="@dimen/padding_small"
 		android:textSize="@dimen/info_window_city_text_size"
 		android:textStyle="bold"
-		android:drawableStart="@drawable/weather_icon_01"
-		android:drawableLeft="@drawable/weather_icon_01"
 		tools:text="Ростов-на-Дону"/>
 	<TextView
 		android:id="@+id/infoWindowSnippet"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
+		android:paddingBottom="@dimen/padding_small"
+		android:paddingLeft="@dimen/padding_small"
+		android:paddingRight="@dimen/padding_small"
 		tools:text="Детали погоды"/>
+	<Button
+		android:id="@+id/infoWindowEditButton"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:paddingLeft="@dimen/padding_small"
+		android:paddingRight="@dimen/padding_small"
+		android:text="@string/change"
+		android:visibility="gone"
+		style="@style/ButtonEdit"/>
 </LinearLayout>
