--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
 	<color name="cityNameColor">#333</color>
 	<color name="disabledLocationButton">#80008577</color>
 	<color name="updateScreenBackground">#8a000000</color>
+	<color name="colorSuccessButton">#0a0</color>
 </resources>
