--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,18 +10,18 @@
 		android:id="@+id/viewPager"
 		android:layout_width="0dp"
 		android:layout_height="0dp"
-		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintBottom_toTopOf="@id/tabs"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintBottom_toTopOf="@id/tabs"/>
+		app:layout_constraintTop_toTopOf="parent"/>
 	<android.support.design.widget.TabLayout
 		android:id="@+id/tabs"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:background="@color/colorPrimary"
-		app:tabTextAppearance="@style/TabTextAppearance"
-		app:tabSelectedTextColor="@android:color/white"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"/>
+		app:layout_constraintStart_toStartOf="parent"
+		app:tabSelectedTextColor="@android:color/white"
+		app:tabTextAppearance="@style/TabTextAppearance"/>
 </android.support.constraint.ConstraintLayout>
