--- a/app/src/main/res/layout/fragment_city_detail.xml
+++ b/app/src/main/res/layout/fragment_city_detail.xml
@@ -9,77 +9,77 @@
 	<LinearLayout
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
-		android:orientation="vertical"
 		android:background="@android:color/white"
+		android:orientation="vertical"
 		android:paddingTop="@dimen/padding"
-		app:layout_constraintTop_toTopOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintBottom_toTopOf="@+id/closeButton"
 		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintBottom_toTopOf="@+id/closeButton">
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent">
 		<TextView
 			android:id="@+id/cityDetailTemperature"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_gravity="center_horizontal"
-			android:textSize="@dimen/detail_temperature_text_size"
-			android:drawableStart="@drawable/weather_icon_02"
 			android:drawableLeft="@drawable/weather_icon_02"
+			android:drawableStart="@drawable/weather_icon_02"
 			android:gravity="center"
+			android:layout_gravity="center_horizontal"
 			android:scaleX="2"
 			android:scaleY="2"
+			android:textSize="@dimen/detail_temperature_text_size"
 			tools:text="+18"/>
 		<TextView
-			android:layout_gravity="center_horizontal"
+			android:id="@+id/cityDetailTitle"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:id="@+id/cityDetailTitle"
-			android:layout_marginStart="@dimen/margin_small"
-			android:layout_marginLeft="@dimen/margin_small"
+			android:layout_gravity="center_horizontal"
 			android:layout_marginEnd="@dimen/margin_small"
+			android:layout_marginLeft="@dimen/margin_small"
 			android:layout_marginRight="@dimen/margin_small"
+			android:layout_marginStart="@dimen/margin_small"
 			android:textSize="@dimen/large_text_size"
 			tools:text="Город"/>
 		<LinearLayout
-			android:layout_gravity="center_horizontal"
-			android:orientation="vertical"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:paddingTop="@dimen/padding"
-			android:gravity="center">
+			android:gravity="center"
+			android:layout_gravity="center_horizontal"
+			android:orientation="vertical"
+			android:paddingTop="@dimen/padding">
 			<TextView
 				android:id="@+id/cityDetailWind"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:padding="0dp"
-				tools:text="Ветер: 8 м/с"
-				style="@style/CityDetailInfo"/>
+				style="@style/CityDetailInfo"
+				tools:text="Ветер: 8 м/с"/>
 			<TextView
 				android:id="@+id/cityDetailCloudy"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				tools:text="Облачность: 40%"
-				style="@style/CityDetailInfo"/>
+				style="@style/CityDetailInfo"
+				tools:text="Облачность: 40%"/>
 			<TextView
 				android:id="@+id/cityDetailHumidity"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				tools:text="Влажность: 15%"
-				style="@style/CityDetailInfo"/>
+				style="@style/CityDetailInfo"
+				tools:text="Влажность: 15%"/>
 			<TextView
 				android:id="@+id/cityDetailPressure"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				tools:text="Давление: 760 мм"
-				style="@style/CityDetailInfo"/>
+				style="@style/CityDetailInfo"
+				tools:text="Давление: 760 мм"/>
 		</LinearLayout>
 	</LinearLayout>
 	<Button
 		android:id="@+id/closeButton"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
+		android:background="@color/colorPrimary"
 		android:text="@string/back"
 		android:textColor="@android:color/white"
-		android:background="@color/colorPrimary"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"/>
