--- a/app/src/main/res/layout/activity_add_city.xml
+++ b/app/src/main/res/layout/activity_add_city.xml
@@ -36,10 +36,22 @@
 				android:layout_marginRight="@dimen/margin_small"
 				android:layout_marginStart="@dimen/margin_small"
 				android:maxLength="50"
-				app:layout_constraintEnd_toEndOf="parent"
-				app:layout_constraintHorizontal_bias="1.0"
+				app:layout_constraintEnd_toStartOf="@+id/deleteButton"
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintTop_toBottomOf="@+id/CityNameText"/>
+			<ImageButton
+				android:id="@+id/deleteButton"
+				android:layout_width="wrap_content"
+				android:layout_height="0dp"
+				android:background="@drawable/background_button_delete"
+				android:contentDescription="@string/remove"
+				android:layout_marginEnd="@dimen/margin_small"
+				android:layout_marginRight="@dimen/margin_small"
+				android:visibility="gone"
+				app:layout_constraintBottom_toBottomOf="@+id/cityNameEdit"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintTop_toBottomOf="@+id/CityNameText"
+				app:srcCompat="@drawable/ic_delete"/>
 			<TextView
 				android:id="@+id/temperatureText"
 				android:layout_width="wrap_content"
