--- a/app/src/main/res/drawable/background_remove_button.xml
+++ b/app/src/main/res/drawable/background_remove_button.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 	android:shape="rectangle">
-	<solid android:color="@color/colorSuccessButton"/>
-	<corners android:bottomRightRadius="@dimen/padding"/>
+	<solid android:color="@color/colorCancelButton"/>
+	<corners android:bottomLeftRadius="@dimen/padding"/>
 	<padding android:bottom="@dimen/padding_small"
 		android:top="@dimen/padding_small"/>
 </shape>
