--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,4 +32,8 @@
 		<item name="android:background">@drawable/background_edit_button</item>
 		<item name="android:textSize">@dimen/detail_temperature_text_size</item>
 	</style>
+	<style name="ChooseDialogIcon" parent="Widget.AppCompat.ImageButton">
+		<item name="android:minWidth">@dimen/choose_dialog_icon_size</item>
+		<item name="android:background">@drawable/background_choose_icon</item>
+	</style>
 </resources>
