--- a/app/src/main/res/layout/activity_add_city_new.xml
+++ b/app/src/main/res/layout/activity_add_city_new.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
@@ -13,12 +13,12 @@
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent">
-		<android.support.constraint.ConstraintLayout
+		<androidx.constraintlayout.widget.ConstraintLayout
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:focusable="true"
 			android:focusableInTouchMode="true">
-			<android.support.constraint.ConstraintLayout
+			<androidx.constraintlayout.widget.ConstraintLayout
 				android:id="@+id/headerConstraint"
 				android:layout_width="0dp"
 				android:layout_height="wrap_content"
@@ -51,7 +51,7 @@
 					app:layout_constraintStart_toStartOf="@+id/editorWeatherIcon"
 					app:srcCompat="@drawable/ic_edit_pen_button">
 				</ImageView>
-			</android.support.constraint.ConstraintLayout>
+			</androidx.constraintlayout.widget.ConstraintLayout>
 			<TextView
 				android:id="@+id/editorNameText"
 				android:layout_width="wrap_content"
@@ -306,7 +306,7 @@
 				android:text="@string/pressure_max"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintTop_toBottomOf="@+id/editorPressureText"/>
-		</android.support.constraint.ConstraintLayout>
+		</androidx.constraintlayout.widget.ConstraintLayout>
 	</ScrollView>
 	<Button
 		android:id="@+id/editorCancelButton"
@@ -328,4 +328,4 @@
 		app:layout_constraintHorizontal_bias="0.5"
 		app:layout_constraintStart_toEndOf="@+id/editorCancelButton"
 		style="@style/ButtonSave"/>
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
