--- a/app/src/main/res/layout/activity_choose_icon.xml
+++ b/app/src/main/res/layout/activity_choose_icon.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:id="@+id/iconsContainer"
 	android:layout_width="match_parent"
@@ -201,4 +201,4 @@
 		app:layout_constraintTop_toBottomOf="@+id/icon10"
 		app:srcCompat="@drawable/weather_icon_50"
 		style="@style/ChooseDialogIcon"/>
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
