--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,10 +18,10 @@
 		android:id="@+id/tabs"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
-		android:background="@color/colorPrimary"
+		android:background="@drawable/background_tab_bar"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		app:tabSelectedTextColor="@android:color/white"
+		app:tabSelectedTextColor="@color/cityNameColor"
 		app:tabTextAppearance="@style/TabTextAppearance"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
